# schema/openapi/openapi.yaml
@@ -1859,7 +1859,6 @@ components:
       type: object
       required:
         - id
-        - company_id
         - party_code
         - party_kind
         - name
@@ -1867,9 +1866,6 @@ components:
         - metadata
       properties:
         id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         party_code:
@@ -1929,16 +1925,12 @@ components:
     CreatePartyRequest:
       type: object
       required:
-        - company_id
         - party_code
         - party_kind
         - name
         - status
         - metadata
       properties:
-        company_id:
-          type: string
-          format: uuid
         party_code:
           type: string
           maxLength: 30
@@ -1983,16 +1975,12 @@ components:
     UpdatePartyRequest:
       type: object
       required:
-        - company_id
         - party_code
         - party_kind
         - name
         - status
         - metadata
       properties:
-        company_id:
-          type: string
-          format: uuid
         party_code:
           type: string
           maxLength: 30
@@ -2037,9 +2025,6 @@ components:
     PatchPartyRequest:
       type: object
       properties:
-        company_id:
-          type: string
-          format: uuid
         party_code:
           type: string
           maxLength: 30
@@ -2096,7 +2081,6 @@ components:
       required:
         - id
         - party_id
-        - company_id
         - address_type
         - line1
         - is_primary
@@ -2109,9 +2093,6 @@ components:
           type: string
           format: uuid
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         address_type:
@@ -2185,7 +2166,6 @@ components:
       type: object
       required:
         - party_id
-        - company_id
         - address_type
         - line1
         - is_primary
@@ -2195,9 +2175,6 @@ components:
         - metadata
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         address_type:
@@ -2258,7 +2235,6 @@ components:
       type: object
       required:
         - party_id
-        - company_id
         - address_type
         - line1
         - is_primary
@@ -2268,9 +2244,6 @@ components:
         - metadata
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         address_type:
@@ -2331,9 +2304,6 @@ components:
       type: object
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         address_type:
@@ -2405,7 +2375,6 @@ components:
       required:
         - id
         - party_id
-        - company_id
         - name
         - is_primary
         - metadata
@@ -2414,9 +2383,6 @@ components:
           type: string
           format: uuid
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         name:
@@ -2460,15 +2426,11 @@ components:
       type: object
       required:
         - party_id
-        - company_id
         - name
         - is_primary
         - metadata
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         name:
@@ -2499,15 +2461,11 @@ components:
       type: object
       required:
         - party_id
-        - company_id
         - name
         - is_primary
         - metadata
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         name:
@@ -2538,9 +2496,6 @@ components:
       type: object
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         name:
@@ -2582,7 +2537,6 @@ components:
       required:
         - id
         - party_id
-        - company_id
         - label
         - email
         - is_primary
@@ -2592,9 +2546,6 @@ components:
           type: string
           format: uuid
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         label:
@@ -2625,16 +2576,12 @@ components:
       type: object
       required:
         - party_id
-        - company_id
         - label
         - email
         - is_primary
         - metadata
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         label:
@@ -2652,16 +2599,12 @@ components:
       type: object
       required:
         - party_id
-        - company_id
         - label
         - email
         - is_primary
         - metadata
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         label:
@@ -2679,9 +2622,6 @@ components:
       type: object
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         label:
@@ -2710,7 +2650,6 @@ components:
       required:
         - id
         - party_id
-        - company_id
         - label
         - phone
         - is_primary
@@ -2720,9 +2659,6 @@ components:
           type: string
           format: uuid
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         label:
@@ -2753,16 +2689,12 @@ components:
       type: object
       required:
         - party_id
-        - company_id
         - label
         - phone
         - is_primary
         - metadata
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         label:
@@ -2780,16 +2712,12 @@ components:
       type: object
       required:
         - party_id
-        - company_id
         - label
         - phone
         - is_primary
         - metadata
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         label:
@@ -2807,9 +2735,6 @@ components:
       type: object
       properties:
         party_id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         label:
